--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Settings">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Settings" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <RadioButton android:id="@+id/auto_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Automated Water Switch"
+        android:onClick="onAutomaticButtonClicked"/>
+    <RadioButton android:id="@+id/notifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notifications"
+        android:onClick="onRadioButtonClicked"/>
+    </RadioGroup>
 
-</FrameLayout>
+
+</LinearLayout>
