--- a/app/src/main/res/layout/fragment_water_control.xml
+++ b/app/src/main/res/layout/fragment_water_control.xml
@@ -4,26 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.WaterControl"
-    android:background="#102f65">
+    android:background="@color/white">
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        android:text="Water Control"
+        android:textSize="35dp"/>
     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="51dp"
-        android:layout_marginTop="231dp"
-        android:max="10"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
+        android:layout_height="60dp"
+        android:layout_below="@id/text"
+        android:layout_marginTop="60dp"
+        android:layout_centerHorizontal="true"
+        android:max="5"
+        android:background="@color/colorPrimary"/>
 
     <TextView
         android:id="@+id/textView1"
+        android:textSize="35dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#222222"
         android:layout_below="@+id/seekBar1"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="14dp" />
+        android:layout_marginTop="50dp" />
 
 </RelativeLayout>
