--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_tank_meter"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_local_drink_black_24dp"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_water_level_graph"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_timeline_black_24dp"
         android:title="@string/title_dashboard" />
 
     <item
         android:id="@+id/navigation_water_control"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_format_color_reset_black_24dp"
         android:title="@string/title_notifications" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/title_settings" />
 </menu>
