--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Settings">
 
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <RadioButton android:id="@+id/auto_switch"
+    <TextView
+        android:id="@+id/title"
+        android:layout_marginTop="35dp"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Automated Water Switch"
-        android:onClick="onAutomaticButtonClicked"/>
-    <RadioButton android:id="@+id/notifications"
+        android:textSize="35dp"
+        android:text="Settings"/>
+
+
+    <CheckBox android:id="@+id/auto_switch"
+        android:layout_below="@id/title"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Notifications"
-        android:onClick="onRadioButtonClicked"/>
-    </RadioGroup>
+        android:text="Automated Water Switch" />
+
+    <CheckBox android:id="@+id/notifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/auto_switch"
+        android:layout_marginLeft="25dp"
+        android:textSize="24dp"
+        android:text="Notifications" />
 
 
-</LinearLayout>
+</RelativeLayout>
